# llm-experiments

./: .gitignore  README.md  llama_cpp_test.ipynb  local_llms.ipynb  mlx_local_llms.ipynb  mlx_test.ipynb  pyproject.toml
