[tool.poetry]
name = "llm-experiments"
version = "0.1.0"
description = "Notebooks exploring the use of open source LLMs in a local environment"
authors = ["Chad Parmet <cparmet@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipython = "^8.27.0"
torch = "^2.4.0"
mlx-lm = "^0.18.1"
ipykernel = "^6.29.5"
langchain-community = "^0.2.15"
langchain = "^0.2.15"
google-search-results = "^2.4.2"
numexpr = "^2.10.1"
llama-cpp-python = "^0.2.90"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
